# siberiacpp2017

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
hello/src/: main.cpp
src/: main.cpp
